[package]
name = "roombot"
version = "0.1.0"
authors = ["Matthijs `Pukkertje` Padding <mppadding@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"

serenity = "0.7.2"
redis = "0.15.1"

clokwerk = "0.2.2"
